<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/joke_create_fragment_layout"
    android:background="@color/blueBlack"
    android:padding="20dp"
    tools:context=".ui.jokeCreate.JokeCreateFragment">


    <EditText
        android:id="@+id/question"
        android:layout_marginTop="50dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/question_placeholder"
        android:textColor="@color/mainColor"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/question_text" />

    <EditText
        android:id="@+id/answer"
        android:layout_marginTop="100dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/answer_placeholder"
        android:textColor="@color/mainColor"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/answer_text"/>

    <EditText
        android:id="@+id/category"
        android:layout_marginTop="100dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/category_placeholder"
        android:textColor="@color/mainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer"
        tools:text="@string/category_name" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mainColor"
        android:padding="20dp"
        android:text="@string/save"
        android:textColor="@color/blueBlack"
        android:textSize="22sp"
        app:cornerRadius="30dp"
        android:width="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category" />

</androidx.constraintlayout.widget.ConstraintLayout>